@@ -2,6 +2,9 @@
 	- detect localhost in DHCP DNS servers and skip them, because a loop
 	  from the resolver to itself is not good.  Since localhost resolver
 	  may probe as a good DNS cache itself easily.
+	- can detect network disconnect and acts appropriately (very quiet).
+	- fix bug with active number of connections.
+	- fix nice exit for panel on quit.
 
 15 Aug 2011: Wouter
 	- log with time in readable format (to logfile), detects strftime.
